add clarifier to data to help interpretation;

--- a/scripts/results_sections/results_section_3_prolonged_colonization_data.html
+++ b/scripts/results_sections/results_section_3_prolonged_colonization_data.html
@@ -657,9 +657,9 @@ loaded via a namespace (and not attached):
 <pre><code>[1] &quot;Number of subjects with index specimens positive: 31&quot;</code></pre>
 <pre><code>[1] &quot;Proportion of subjects with index specimens positive: 0.775&quot;</code></pre>
 </div>
-<div id="how-many-of-the-maldi-level-prolonged-colonization-had-a-qc-passing-genome-for-their-index-genome" class="section level1">
-<h1>How many of the MALDI-level prolonged colonization had a QC-passing
-genome for their index genome?</h1>
+<div id="how-many-of-the-maldi-characterized-species-level-prolonged-colonization-had-a-qc-passing-genome-for-their-index-genome" class="section level1">
+<h1>How many of the MALDI characterized species-level prolonged
+colonization had a QC-passing genome for their index genome?</h1>
 <pre><code>[1] &quot;How many of the prolonged colonization episodes we had their index sequenced: 22&quot;</code></pre>
 <pre><code>[1] &quot;How many of the clinical definition did we have qc-passing WGS escre genome?&quot;</code></pre>
 <pre><code>
