update plasmid sharing colonization algorithm

--- a/scripts/results_sections/results_section_4_ESCrE_sharing_prolonged_colonization.html
+++ b/scripts/results_sections/results_section_4_ESCrE_sharing_prolonged_colonization.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-11-03" />
+<meta name="date" content="2025-11-04" />
 
 <title>Results Section 4: Sharing of ESCrEs provides additional support for prolonged colonization</title>
 
@@ -353,7 +353,7 @@ display: none;
 <h1 class="title toc-ignore">Results Section 4: Sharing of ESCrEs
 provides additional support for prolonged colonization</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-11-03</h4>
+<h4 class="date">2025-11-04</h4>
 
 </div>
 
@@ -379,7 +379,7 @@ Sys.info()</code></pre>
                                                                                                     version 
 &quot;Darwin Kernel Version 24.6.0: Mon Aug 11 21:16:05 PDT 2025; root:xnu-11417.140.69.701.11~1/RELEASE_X86_64&quot; 
                                                                                                    nodename 
-                                                                                           &quot;msla0572.local&quot; 
+                                                                              &quot;msla0572.wifi.med.umich.edu&quot; 
                                                                                                     machine 
                                                                                                    &quot;x86_64&quot; 
                                                                                                       login 
@@ -437,6 +437,20 @@ loaded via a namespace (and not attached):
 </div>
 <div id="three-case-patients-had-episode-of-shraing-esbl-plasmidic-genes" class="section level1">
 <h1>Three case patients had episode of shraing ESBL plasmidic genes</h1>
+<pre><code>[1] &quot;Strain vs. ESCrE gene sharing&quot;</code></pre>
+<pre><code>, , Species-level = 0
+
+      Plasmidic ESCrE
+Strain  0  1
+     0 11  0
+     1  0  0
+
+, , Species-level = 1
+
+      Plasmidic ESCrE
+Strain  0  1
+     0  1  3
+     1  0 16</code></pre>
 <pre><code>[1] &quot;Strain vs. ESCrE gene sharing&quot;</code></pre>
 <pre><code>      Plasmidic ESCrE
 Strain  0  1
@@ -4893,6 +4907,291 @@ Proteus mirabilis ST Unknown Singleton
 </table>
 </div>
 </div>
+</div>
+<div id="restriction-to-plasmid-linked-helped-distinguish-between-probable-cases-of-plasmid-sharing" class="section level2">
+<h2>Restriction to plasmid linked helped distinguish between probable
+cases of plasmid sharing…</h2>
+[[1]]
+<table style="width:100%; color: black; margin-left: auto; margin-right: auto;" class="table table-striped table-hover table-condensed table-responsive">
+<thead>
+<tr>
+<th style="text-align:left;">
+household
+</th>
+<th style="text-align:left;">
+genomic_id
+</th>
+<th style="text-align:left;">
+Species_ST_cluster
+</th>
+<th style="text-align:right;">
+visit
+</th>
+<th style="text-align:left;">
+plasmids
+</th>
+<th style="text-align:left;">
+bla_genes
+</th>
+<th style="text-align:left;">
+ESCrE_genes
+</th>
+<th style="text-align:left;">
+ESCrE_plasmidic_genes
+</th>
+<th style="text-align:left;">
+bla_chromosome_genes
+</th>
+<th style="text-align:left;">
+ESCrE_chromosome_genes
+</th>
+<th style="text-align:left;">
+ESCrE_plasmid_genes
+</th>
+<th style="text-align:left;">
+bla_plasmids
+</th>
+<th style="text-align:left;">
+ESCrE_plasmids
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;">
+1H
+</td>
+<td style="text-align:left;">
+MERLIN_288
+</td>
+<td style="text-align:left;">
+Escherichia coli ST 69 Singleton
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:left;">
+AA277;AA337;AA474;AA553;AA579;AA619;AA977;AC431;novel_79f30b0d6dbdbf76081706ab79ee0ca0
+</td>
+<td style="text-align:left;">
+blaCTX-M-15;blaEC-8*
+</td>
+<td style="text-align:left;">
+blaCTX-M-15;blaEC-8*
+</td>
+<td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
+blaEC-8*
+</td>
+<td style="text-align:left;">
+blaEC-8*
+</td>
+<td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
+AA474
+</td>
+<td style="text-align:left;">
+AA474
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+1H
+</td>
+<td style="text-align:left;">
+MERLIN_284
+</td>
+<td style="text-align:left;">
+Klebsiella pneumoniae ST 45 Cluster 1
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+AA031;AA110;AA123;AA277;AB531;AC082;AD094
+</td>
+<td style="text-align:left;">
+blaCTX-M-15;blaSHV-1?;blaTEM-1?<em>;blaTEM-105?</em>
+</td>
+<td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
+AA031;AA277
+</td>
+<td style="text-align:left;">
+AA277
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+1H
+</td>
+<td style="text-align:left;">
+MERLIN_268
+</td>
+<td style="text-align:left;">
+Escherichia coli ST 6321 Cluster 1
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+AA110;AA378;AA474;AA579;AA619;AA977;AB685;AC431
+</td>
+<td style="text-align:left;">
+blaCTX-M-15;blaEC-8*;blaTEM-1?
+</td>
+<td style="text-align:left;">
+blaCTX-M-15;blaEC-8*
+</td>
+<td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
+blaEC-8*
+</td>
+<td style="text-align:left;">
+blaEC-8*
+</td>
+<td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
+AA378;AA474
+</td>
+<td style="text-align:left;">
+AA378
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+1H
+</td>
+<td style="text-align:left;">
+MERLIN_271
+</td>
+<td style="text-align:left;">
+Klebsiella pneumoniae ST 45 Cluster 1
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+AA277;AB183;AB531;AE974
+</td>
+<td style="text-align:left;">
+blaCTX-M-15;blaTEM-1?<em>;blaTEM-105?</em>
+</td>
+<td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
+AA277
+</td>
+<td style="text-align:left;">
+AA277
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+1H
+</td>
+<td style="text-align:left;">
+MERLIN_272
+</td>
+<td style="text-align:left;">
+Escherichia coli ST 6321 Cluster 1
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+AA110;AA378;AA552;AA579;AA619;AA977;AB685;AC026
+</td>
+<td style="text-align:left;">
+blaCTX-M-15;blaEC-8*
+</td>
+<td style="text-align:left;">
+blaCTX-M-15;blaEC-8*
+</td>
+<td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
+blaEC-8*
+</td>
+<td style="text-align:left;">
+blaEC-8*
+</td>
+<td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
+AC026
+</td>
+<td style="text-align:left;">
+AC026
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+1H
+</td>
+<td style="text-align:left;">
+MERLIN_173
+</td>
+<td style="text-align:left;">
+Proteus mirabilis ST Unknown Singleton
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+</td>
+</tr>
+</tbody>
+</table>
 </div>
 </div>
 
