--- a/scripts/prolonged_colonization/prolonged_colonization_index_patients.html
+++ b/scripts/prolonged_colonization/prolonged_colonization_index_patients.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-11-03" />
+<meta name="date" content="2025-11-04" />
 
 <title>Prolonged colonization</title>
 
@@ -352,7 +352,7 @@ display: none;
 
 <h1 class="title toc-ignore">Prolonged colonization</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-11-03</h4>
+<h4 class="date">2025-11-04</h4>
 
 </div>
 
@@ -375,7 +375,7 @@ Sys.info()</code></pre>
                                                                                                     version 
 &quot;Darwin Kernel Version 24.6.0: Mon Aug 11 21:16:05 PDT 2025; root:xnu-11417.140.69.701.11~1/RELEASE_X86_64&quot; 
                                                                                                    nodename 
-                                                                                           &quot;msla0572.local&quot; 
+                                                                              &quot;msla0572.wifi.med.umich.edu&quot; 
                                                                                                     machine 
                                                                                                    &quot;x86_64&quot; 
                                                                                                       login 
@@ -500,7 +500,7 @@ get_prolonged_colonization_str_split &lt;- function(isolate,metadata,variable,sp
 }
 
 # Plasmid aware analysis
-get_prolonged_colonization_str_split_plasmid_aware &lt;- function(isolate,metadata,chromosome_variable,plasmid_variable,split){
+get_prolonged_colonization_str_split_plasmid_aware &lt;- function(isolate,metadata,chromosome_variable,plasmid_variable,split,require_shared_plasmid=NULL,plasmid_cluster_variable=NULL,name){
   isolate_df &lt;- subset(metadata,household==isolate)
   isolate_index &lt;- subset(isolate_df,visit==0) 
   isolate_index_plasmid &lt;- isolate_index[[plasmid_variable]] %&gt;% str_split(.,split) %&gt;% unlist %&gt;% subset(is.na(.)==F &amp; .!=&#39;&#39;)
@@ -515,17 +515,25 @@ get_prolonged_colonization_str_split_plasmid_aware &lt;- function(isolate,metada
     }  else { 
   isolate_one_month_plasmid &lt;- subset(isolate_df,visit==2) %&gt;% .[[plasmid_variable]]  %&gt;% str_split(.,split) %&gt;% unlist
   isolate_one_month_chromosome &lt;-  subset(isolate_df,visit==2) %&gt;% .[[chromosome_variable]]  %&gt;% str_split(.,split) %&gt;% unlist
-  isolate_one_month_same &lt;- ifelse(sum(isolate_index_plasmid %in% isolate_one_month_chromosome) | sum(isolate_index_chromosome %in% isolate_one_month_plasmid) &gt;0 | sum(isolate_index_plasmid %in%isolate_one_month_plasmid ) &gt;0,1,0)
+  isolate_one_month_same &lt;- ifelse(sum(isolate_index_plasmid %in% isolate_one_month_chromosome) | sum(isolate_index_chromosome %in% isolate_one_month_plasmid) &gt;0 | sum(isolate_index_plasmid %in% isolate_one_month_plasmid ) &gt;0,1,0)
   
   isolate_two_month_plasmid &lt;- subset(isolate_df,visit==3) %&gt;% .[[plasmid_variable]]  %&gt;% str_split(.,split) %&gt;% unlist
   isolate_two_month_chromosome &lt;-  subset(isolate_df,visit==3) %&gt;% .[[chromosome_variable]]  %&gt;% str_split(.,split) %&gt;% unlist
   isolate_two_month_same &lt;- ifelse(sum(isolate_index_plasmid %in% isolate_two_month_chromosome) | sum(isolate_index_chromosome %in% isolate_two_month_plasmid) &gt;0 | sum(isolate_index_plasmid %in%isolate_two_month_plasmid ) &gt;0,1,0) 
  
   index_at_1_and_or_2 &lt;- ifelse(isolate_one_month_same==1 | isolate_two_month_same==1,1,0)
-    }
+  }
+  if(require_shared_plasmid==T){
+    index_plasmids &lt;- isolate_index[[plasmid_cluster_variable]] %&gt;% str_split(.,split) %&gt;% unlist %&gt;% subset(is.na(.)==F &amp; .!=&#39;&#39;)
+    one_month_plasmids &lt;-  subset(isolate_df,visit==2) %&gt;% .[[plasmid_cluster_variable]] %&gt;% str_split(.,split) %&gt;% unlist %&gt;% subset(is.na(.)==F &amp; .!=&#39;&#39;)
+    two_month_plasmids &lt;-  subset(isolate_df,visit==3)   %&gt;% .[[plasmid_cluster_variable]] %&gt;% str_split(.,split) %&gt;% unlist %&gt;% subset(is.na(.)==F &amp; .!=&#39;&#39;)
+    isolate_one_month_same &lt;- ifelse(sum(index_plasmids %in% one_month_plasmids)&gt;0 &amp; isolate_one_month_same==1,1,0)
+    isolate_two_month_same &lt;- ifelse(sum(index_plasmids %in% two_month_plasmids)&gt;0 &amp; isolate_two_month_same==1,1,0)
+    index_at_1_and_or_2 &lt;-  ifelse(sum(index_plasmids %in% c(one_month_plasmids,two_month_plasmids))&gt;0 &amp; index_at_1_and_or_2==1,1,0)
+  }
   
   results &lt;- cbind.data.frame(household=isolate,isolate_one_month_same,isolate_two_month_same,index_at_1_and_or_2)
-  colnames(results) &lt;- c(&quot;household&quot;,paste0(colnames(results)[-1],&quot;_ESCrE_genes_plasmid_aware&quot;))
+  colnames(results) &lt;- c(&quot;household&quot;,paste0(colnames(results)[-1],&quot;_ESCrE_genes_plasmid_&quot;,name))
   
   return(results)
 } </code></pre>
@@ -539,9 +547,13 @@ maldi_sharing &lt;- lapply(ESCrE_index_positive_households,get_prolonged_coloniz
 ESCrE_genes_sharing &lt;- lapply(ESCrE_index_positive_households,get_prolonged_colonization_str_split,df_index,variable=&#39;ESCrE_genes&#39;,split=&quot;;&quot;) %&gt;% do.call(rbind,.)
  
 # ESCrE plasmid aware
-ESCrE_plasmid_aware_sharing &lt;- lapply(ESCrE_index_positive_households,get_prolonged_colonization_str_split_plasmid_aware,df_index,chromosome_variable=&#39;ESCrE_chromosome_genes&#39;,plasmid_variable = &quot;ESCrE_plasmid_genes&quot;,split=&quot;;&quot;) %&gt;% do.call(rbind,.)
+ESCrE_plasmid_aware_sharing &lt;- lapply(ESCrE_index_positive_households,get_prolonged_colonization_str_split_plasmid_aware,df_index,chromosome_variable=&#39;ESCrE_chromosome_genes&#39;,plasmid_variable = &quot;ESCrE_plasmid_genes&quot;,split=&quot;;&quot;,require_shared_plasmid=F,plasmid_cluster_variable=NULL,name=&#39;aware&#39;) %&gt;% do.call(rbind,.)
 
-prolonged_df &lt;- left_join(prolonged_df,ESCrE_genes_sharing)  %&gt;% left_join(.,ESCrE_plasmid_aware_sharing) %&gt;% left_join(.,maldi_sharing)</code></pre>
+ESCrE_plasmid_linked_sharing &lt;- lapply(ESCrE_index_positive_households,get_prolonged_colonization_str_split_plasmid_aware,df_index,chromosome_variable=&#39;ESCrE_chromosome_genes&#39;,plasmid_variable = &quot;ESCrE_plasmid_genes&quot;,split=&quot;;&quot;,require_shared_plasmid=T,plasmid_cluster_variable=&quot;plasmids&quot;,name=&#39;linked&#39;) %&gt;% do.call(rbind,.)
+
+ESCrE_plasmid_linked_specific_sharing &lt;- lapply(ESCrE_index_positive_households,get_prolonged_colonization_str_split_plasmid_aware,df_index,chromosome_variable=&#39;ESCrE_chromosome_genes&#39;,plasmid_variable = &quot;ESCrE_plasmid_genes&quot;,split=&quot;;&quot;,require_shared_plasmid=T,plasmid_cluster_variable=&quot;ESCrE_plasmids&quot;,name=&#39;shared&#39;) %&gt;% do.call(rbind,.)
+
+prolonged_df &lt;- left_join(prolonged_df,ESCrE_genes_sharing)  %&gt;% left_join(.,ESCrE_plasmid_aware_sharing) %&gt;% left_join(.,ESCrE_plasmid_linked_sharing) %&gt;% left_join(.,ESCrE_plasmid_linked_specific_sharing) </code></pre>
 </div>
 </div>
 <div id="generate-merged-datapoints" class="section level1">
@@ -549,8 +561,14 @@ prolonged_df &lt;- left_join(prolonged_df,ESCrE_genes_sharing)  %&gt;% left_join
 <pre class="r"><code># Cluster + ESCrE genes
 prolonged_df$index_at_1_and_or_2_Species_ST_cluster_ESCrE_genes &lt;- ifelse(prolonged_df$index_at_1_and_or_2_Species_ST_cluster==1 | prolonged_df$index_at_1_and_or_2_ESCrE_genes ==1,1,0) 
 
-# Cluster + Plasmid-linked ESCrE genes
-prolonged_df$index_at_1_and_or_2_Species_ST_cluster_ESCrE_genes_plasmid_aware &lt;- ifelse(prolonged_df$index_at_1_and_or_2_Species_ST_cluster==1 | prolonged_df$index_at_1_and_or_2_ESCrE_genes_plasmid_aware ==1,1,0) </code></pre>
+# Cluster + Plasmid-aware ESCrE genes
+prolonged_df$index_at_1_and_or_2_Species_ST_cluster_ESCrE_genes_plasmid_aware &lt;- ifelse(prolonged_df$index_at_1_and_or_2_Species_ST_cluster==1 | prolonged_df$index_at_1_and_or_2_ESCrE_genes_plasmid_aware ==1,1,0) 
+
+# Cluster + Plasmid-linked ESCrE  
+prolonged_df$index_at_1_and_or_2_Species_ST_cluster_ESCrE_genes_plasmid_linked &lt;- ifelse(prolonged_df$index_at_1_and_or_2_Species_ST_cluster==1 | prolonged_df$index_at_1_and_or_2_ESCrE_genes_plasmid_linked ==1,1,0) 
+
+# Cluster + Plasmid-linked ESCrE plasmids
+prolonged_df$index_at_1_and_or_2_Species_ST_cluster_ESCrE_genes_shared_ESCrE_plasmid  &lt;- ifelse(prolonged_df$index_at_1_and_or_2_Species_ST_cluster==1 | prolonged_df$index_at_1_and_or_2_ESCrE_genes_plasmid_shared ==1,1,0) </code></pre>
 </div>
 <div id="save-dataset" class="section level1">
 <h1>Save dataset</h1>
