--- a/scripts/results_sections/results_section_3_prolonged_colonization_data.html
+++ b/scripts/results_sections/results_section_3_prolonged_colonization_data.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-11-03" />
+<meta name="date" content="2025-11-04" />
 
 <title>Results Section 3: Discrimination of prolonged colonization using WGS</title>
 
@@ -577,7 +577,7 @@ display: none;
 <h1 class="title toc-ignore">Results Section 3: Discrimination of
 prolonged colonization using WGS</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-11-03</h4>
+<h4 class="date">2025-11-04</h4>
 
 </div>
 
@@ -603,7 +603,7 @@ Sys.info()</code></pre>
                                                                                                     version 
 &quot;Darwin Kernel Version 24.6.0: Mon Aug 11 21:16:05 PDT 2025; root:xnu-11417.140.69.701.11~1/RELEASE_X86_64&quot; 
                                                                                                    nodename 
-                                                                                           &quot;msla0572.local&quot; 
+                                                                              &quot;msla0572.wifi.med.umich.edu&quot; 
                                                                                                     machine 
                                                                                                    &quot;x86_64&quot; 
                                                                                                       login 
@@ -752,13 +752,24 @@ Strain + ESCrE gene
 </tr>
 <tr>
 <td style="text-align:left;">
-Strain + plasmid-linked ESCrE gene
+Strain + plasmid-aware ESCrE gene
 </td>
 <td style="text-align:right;">
 18
 </td>
 <td style="text-align:right;">
 0.90
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Strain + plasmid-linked ESCrE gene
+</td>
+<td style="text-align:right;">
+17
+</td>
+<td style="text-align:right;">
+0.85
 </td>
 </tr>
 </tbody>
@@ -840,6 +851,17 @@ ESCrE gene
 <tr>
 <td style="text-align:left;">
 Strain + ESCrE gene
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.0000000
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Strain + plasmid-aware ESCrE gene
 </td>
 <td style="text-align:right;">
 0
@@ -947,13 +969,24 @@ Strain + ESCrE gene
 </tr>
 <tr>
 <td style="text-align:left;">
-Strain + plasmid-linked ESCrE gene
+Strain + plasmid-aware ESCrE gene
 </td>
 <td style="text-align:right;">
 18
 </td>
 <td style="text-align:right;">
 0.5806452
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Strain + plasmid-linked ESCrE gene
+</td>
+<td style="text-align:right;">
+17
+</td>
+<td style="text-align:right;">
+0.5483871
 </td>
 </tr>
 </tbody>
