--- a/scripts/results_sections/results_section_4_ESCrE_sharing_prolonged_colonization.html
+++ b/scripts/results_sections/results_section_4_ESCrE_sharing_prolonged_colonization.html
@@ -4271,8 +4271,9 @@ blaCMY-25*
 </tbody>
 </table>
 </div>
-<div id="example-cases-explained-by-escre-but-not-strain" class="section level2">
-<h2>Example cases explained by ESCrE but not strain</h2>
+</div>
+<div id="cases-explained-by-escre-persistence-but-not-strain" class="section level1">
+<h1>Cases explained by ESCrE persistence but not strain</h1>
 <div id="novel-strain-acquisition" class="section level3">
 <h3>Novel strain acquisition:</h3>
 <div id="h---different-e.-coli-st---linked-by-blaec-8-but-this-was-on-the-chromosome-of-both-genomes" class="section level4">
@@ -4905,7 +4906,6 @@ Proteus mirabilis ST Unknown Singleton
 </tr>
 </tbody>
 </table>
-</div>
 </div>
 </div>
 <div id="restriction-to-plasmid-linked-helped-distinguish-between-probable-cases-of-plasmid-sharing" class="section level2">
