update s tab 1 with perc and gene

--- a/scripts/tables/s_table_1_ESBL_plasmidic_location.html
+++ b/scripts/tables/s_table_1_ESBL_plasmidic_location.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-11-03" />
+<meta name="date" content="2025-11-04" />
 
 <title>Supplemental Table 1: Location of ESCrE genes on short-read assemblies</title>
 
@@ -577,7 +577,7 @@ display: none;
 <h1 class="title toc-ignore">Supplemental Table 1: Location of ESCrE
 genes on short-read assemblies</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-11-03</h4>
+<h4 class="date">2025-11-04</h4>
 
 </div>
 
@@ -603,7 +603,7 @@ Sys.info()</code></pre>
                                                                                                     version 
 &quot;Darwin Kernel Version 24.6.0: Mon Aug 11 21:16:05 PDT 2025; root:xnu-11417.140.69.701.11~1/RELEASE_X86_64&quot; 
                                                                                                    nodename 
-                                                                                           &quot;msla0572.local&quot; 
+                                                                              &quot;msla0572.wifi.med.umich.edu&quot; 
                                                                                                     machine 
                                                                                                    &quot;x86_64&quot; 
                                                                                                       login 
@@ -657,7 +657,7 @@ loaded via a namespace (and not attached):
 <thead>
 <tr>
 <th style="text-align:left;">
-ESCrE
+ESCrE gene
 </th>
 <th style="text-align:left;">
 Category
@@ -668,8 +668,8 @@ No. chromosomal
 <th style="text-align:right;">
 No. plasmidic
 </th>
-<th style="text-align:right;">
-Proportion plasmidic
+<th style="text-align:left;">
+Percent plasmidic
 </th>
 </tr>
 </thead>
@@ -687,8 +687,8 @@ ampC-like
 <td style="text-align:right;">
 3
 </td>
-<td style="text-align:right;">
-100.00
+<td style="text-align:left;">
+100%
 </td>
 </tr>
 <tr>
@@ -704,8 +704,8 @@ Carbapenemase
 <td style="text-align:right;">
 3
 </td>
-<td style="text-align:right;">
-100.00
+<td style="text-align:left;">
+100%
 </td>
 </tr>
 <tr>
@@ -721,8 +721,8 @@ Carbapenemase
 <td style="text-align:right;">
 3
 </td>
-<td style="text-align:right;">
-100.00
+<td style="text-align:left;">
+100%
 </td>
 </tr>
 <tr>
@@ -738,8 +738,8 @@ ESBL
 <td style="text-align:right;">
 2
 </td>
-<td style="text-align:right;">
-100.00
+<td style="text-align:left;">
+100%
 </td>
 </tr>
 <tr>
@@ -755,8 +755,8 @@ ESBL
 <td style="text-align:right;">
 1
 </td>
-<td style="text-align:right;">
-100.00
+<td style="text-align:left;">
+100%
 </td>
 </tr>
 <tr>
@@ -772,8 +772,8 @@ ESBL
 <td style="text-align:right;">
 1
 </td>
-<td style="text-align:right;">
-100.00
+<td style="text-align:left;">
+100%
 </td>
 </tr>
 <tr>
@@ -789,8 +789,8 @@ ESBL
 <td style="text-align:right;">
 1
 </td>
-<td style="text-align:right;">
-100.00
+<td style="text-align:left;">
+100%
 </td>
 </tr>
 <tr>
@@ -806,8 +806,8 @@ ESBL
 <td style="text-align:right;">
 14
 </td>
-<td style="text-align:right;">
-66.67
+<td style="text-align:left;">
+66.67%
 </td>
 </tr>
 <tr>
@@ -823,8 +823,8 @@ ESBL
 <td style="text-align:right;">
 19
 </td>
-<td style="text-align:right;">
-41.30
+<td style="text-align:left;">
+41.3%
 </td>
 </tr>
 <tr>
@@ -840,8 +840,8 @@ ESBL
 <td style="text-align:right;">
 2
 </td>
-<td style="text-align:right;">
-33.33
+<td style="text-align:left;">
+33.33%
 </td>
 </tr>
 <tr>
@@ -857,8 +857,8 @@ ampC-like
 <td style="text-align:right;">
 0
 </td>
-<td style="text-align:right;">
-0.00
+<td style="text-align:left;">
+0%
 </td>
 </tr>
 <tr>
@@ -874,8 +874,8 @@ ampC-like
 <td style="text-align:right;">
 0
 </td>
-<td style="text-align:right;">
-0.00
+<td style="text-align:left;">
+0%
 </td>
 </tr>
 <tr>
@@ -891,8 +891,8 @@ ampC-like
 <td style="text-align:right;">
 0
 </td>
-<td style="text-align:right;">
-0.00
+<td style="text-align:left;">
+0%
 </td>
 </tr>
 <tr>
@@ -908,8 +908,8 @@ ampC-like
 <td style="text-align:right;">
 0
 </td>
-<td style="text-align:right;">
-0.00
+<td style="text-align:left;">
+0%
 </td>
 </tr>
 <tr>
@@ -925,8 +925,8 @@ ampC-like
 <td style="text-align:right;">
 0
 </td>
-<td style="text-align:right;">
-0.00
+<td style="text-align:left;">
+0%
 </td>
 </tr>
 <tr>
@@ -942,8 +942,8 @@ ampC-like
 <td style="text-align:right;">
 0
 </td>
-<td style="text-align:right;">
-0.00
+<td style="text-align:left;">
+0%
 </td>
 </tr>
 <tr>
@@ -959,8 +959,8 @@ ampC-like
 <td style="text-align:right;">
 0
 </td>
-<td style="text-align:right;">
-0.00
+<td style="text-align:left;">
+0%
 </td>
 </tr>
 <tr>
@@ -976,8 +976,8 @@ ESBL
 <td style="text-align:right;">
 0
 </td>
-<td style="text-align:right;">
-0.00
+<td style="text-align:left;">
+0%
 </td>
 </tr>
 <tr>
@@ -993,8 +993,8 @@ ampC-like
 <td style="text-align:right;">
 0
 </td>
-<td style="text-align:right;">
-0.00
+<td style="text-align:left;">
+0%
 </td>
 </tr>
 <tr>
@@ -1010,8 +1010,8 @@ ampC-like
 <td style="text-align:right;">
 0
 </td>
-<td style="text-align:right;">
-0.00
+<td style="text-align:left;">
+0%
 </td>
 </tr>
 <tr>
@@ -1027,8 +1027,8 @@ ampC-like
 <td style="text-align:right;">
 0
 </td>
-<td style="text-align:right;">
-0.00
+<td style="text-align:left;">
+0%
 </td>
 </tr>
 <tr>
@@ -1044,8 +1044,8 @@ ampC-like
 <td style="text-align:right;">
 0
 </td>
-<td style="text-align:right;">
-0.00
+<td style="text-align:left;">
+0%
 </td>
 </tr>
 <tr>
@@ -1061,8 +1061,8 @@ ampC-like
 <td style="text-align:right;">
 0
 </td>
-<td style="text-align:right;">
-0.00
+<td style="text-align:left;">
+0%
 </td>
 </tr>
 <tr>
@@ -1078,8 +1078,8 @@ ampC-like
 <td style="text-align:right;">
 0
 </td>
-<td style="text-align:right;">
-0.00
+<td style="text-align:left;">
+0%
 </td>
 </tr>
 <tr>
@@ -1095,8 +1095,8 @@ ampC-like
 <td style="text-align:right;">
 0
 </td>
-<td style="text-align:right;">
-0.00
+<td style="text-align:left;">
+0%
 </td>
 </tr>
 </tbody>
